--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 29
@@ -9,7 +10,7 @@ android {
         minSdkVersion 23
         targetSdkVersion 29
         versionCode 1
-        versionName "1.0"
+        versionName "1.0.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -20,8 +21,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-    dataBinding {
-        enabled = true
+
+    buildFeatures {
+        dataBinding = true
+        viewBinding = true
     }
 
 }
@@ -48,18 +51,14 @@ dependencies {
     implementation "com.xwray:groupie:2.7.0"
     implementation "com.xwray:groupie-databinding:2.7.0"
     implementation "com.xwray:groupie-kotlin-android-extensions:2.7.0"
-   // classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-   //implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    // classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    //implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
     implementation 'androidx.drawerlayout:drawerlayout:1.1.0'
 
     //drawer
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'com.android.support:design:29.0.0'
-
-    implementation 'com.android.support:design:22.2.1'
-
-
 
 
 }
