--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,16 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'com.google.firebase:firebase-auth:19.2.0'
     implementation 'com.google.firebase:firebase-database:19.3.1'
+
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
+    implementation 'com.google.android.gms:play-services-location:17.0.0'
+
+    implementation 'com.google.firebase:firebase-messaging:20.1.6'
+    //it is not necessary, but it is recommended
+    implementation 'com.google.firebase:firebase-analytics:17.4.4'
+
+
+    implementation 'com.google.firebase:firebase-messaging:20.2.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
@@ -61,8 +71,6 @@ dependencies {
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'com.android.support:design:29.0.0'
     implementation 'com.android.support:design:22.2.0'
-
-
 
 
 }
